# widgetr

./: Cargo.toml  README.md
src/: main.rs
src/widgets/: mod.rs
